# riscv64-sim

./: .gitignore  Makefile  README.md  sim.c
.github/workflows/: ci.yml
lib/: Makefile  cpu.c  cpu.h  decode.c  decode.h  decode.test.c  imports.syms  loader.c  loader.h  minilib.c  minilib.h  wasm-interface.c
rust/: Cargo.toml
rust/examples/: Makefile  bubblesort.c  grayscale.c  hello-world.c  nqueens.c
rust/jit-templates/: templates.c
rust/src/: cpu.rs  dbg.rs  insts.rs  main.rs  syms.rs  tbs.rs
rust/tests/example/: Makefile  hello-world.c  stuff.c
tests/progs/: Makefile  fibs.S  hello.S  loop.S
www/: index.html  libriscvsim.wasm
www/examples/: loop.elf
