[package]
name = "simrv64i"
version = "0.1.0"
edition = "2021"
authors = ["Lou Knauer <lou.knauer98@gmail.com>"]

[dependencies]
syscalls = { version = "0.6" }
elf = { version = "0.7" }
clap = { version = "4.3.14", features = ["derive"] }
iced-x86 = { version = "1.21.0", features = ["code_asm"] }
libc = "0.2.153"
