[package]
name = "simrv64i"
version = "0.1.0"
edition = "2021"
authors = ["Lou Knauer <lou.knauer98@gmail.com>"]

[profile.dev]
opt-level = 1

[dependencies]
syscalls = { version = "0.6" }
elf = { version = "0.7" }
clap = { version = "4.3.14", features = ["derive"] }
libc = "0.2.153"
gccjit = "=2.0.0"
